# test-package

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
src/: __init__.py  __main__.py  cli.py
